# artifactory-cleanup

./: pyproject.toml  setup.py
