[tool.poetry]
name = "artifactory-cleanup"
version = "1.0.12"  # From setup.py
description = "Rules and cleanup policies for Artifactory"
authors = ["Alexey Burov <allburov@gmail.com>", "wallentx <william.allentx@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wallentx/artifactory-cleanup"
keywords = ["DevOpsHQ"]

[tool.poetry.dependencies]
python = "^3.12"
"hurry.filesize" = "*"
prettytable = "*"
plumbum = "*"
dohq-artifactory = { git = "https://github.com/wallentx/artifactory.git" }  # Pulling from GitHub repo
teamcity-messages = "*"
treelib = "*"
attrs = "*"
pydash = "*"
pyyaml = "*"
cfgv = "~3.3"
typing-extensions = { version = "*", python = "<3.13" }

[tool.poetry.scripts]
artifactory-cleanup = "artifactory_cleanup.cli:ArtifactoryCleanupCLI"

[tool.poetry.dev-dependencies]
pytest = "~7.0"
pytest-datadir = "~1.3"
requests-mock = "~1.9"
build = "~0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
